--- a/src/components/AboutUs.module.css
+++ b/src/components/AboutUs.module.css
@@ -18,15 +18,15 @@
 .headingWrapper {
   width: 100%;
   text-align: center;
-  margin-bottom: 60px;
+  margin-bottom: 36px;
 }
 .heading {
-  font-size: clamp(2.5rem, 5vw, 4rem);
+  font-size: clamp(3.2rem, 7vw, 5rem);
   font-weight: bold;
   color: #fff;
   margin-bottom: 0;
   font-family: 'Open Sans', Arial, Helvetica, sans-serif;
-  letter-spacing: 1px;
+  letter-spacing: 1.5px;
 }
 .contentRow {
   width: 100%;
@@ -64,15 +64,15 @@
   justify-content: center;
 }
 .description {
-  font-size: 1.25rem;
+  font-size: 1.7rem;
   color: #fff;
-  margin-bottom: 22px;
-  line-height: 1.7;
+  margin-bottom: 32px;
+  line-height: 1.8;
   font-family: 'Lato', Arial, Helvetica, sans-serif;
 }
 .videoWrapper {
   width: 100%;
-  max-width: 520px;
+  max-width: 900px;
   aspect-ratio: 16 / 9;
   border-radius: 18px;
   overflow: hidden;
@@ -94,8 +94,8 @@
 .section {
   width: 100vw;
   min-height: 100vh;
-  background: #000000;
-  padding: 80px 0 60px 0;
+  background: #181A1B;
+  padding: 24px 0 24px 0;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
