--- a/src/components/AboutUs.module.css
+++ b/src/components/AboutUs.module.css
@@ -94,7 +94,7 @@
 .section {
   width: 100vw;
   min-height: 100vh;
-  background: #181A1B;
+  background: #23242a;
   padding: 24px 0 24px 0;
   box-sizing: border-box;
   display: flex;
