--- a/src/components/CoreValues.module.css
+++ b/src/components/CoreValues.module.css
@@ -2,7 +2,7 @@
 
 .section {
   padding: 32px 4vw 32px 4vw;
-  background: #181A1B;
+  background: #23242a;
 }
 
 .header {
@@ -234,7 +234,7 @@
 }
 .section {
   padding: 24px 6vw 24px 6vw;
-  background: #181A1B;
+  background: #23242a;
 }
 
 .header {
