--- a/src/components/TestimonialsCarousel.module.css
+++ b/src/components/TestimonialsCarousel.module.css
@@ -101,6 +101,16 @@
   margin-left: 2px;
 }
 
+.testimonialDate {
+  font-family: 'Lato', Arial, Helvetica, sans-serif;
+  font-size: 0.95rem;
+  color: #fff;
+  opacity: 0.7;
+  margin-left: 10px;
+  font-style: italic;
+  font-weight: 400;
+}
+
 @media (max-width: 900px) {
   .carouselMarqueeTrack {
     min-height: 120px;
