--- a/src/components/SiteFooter.module.css
+++ b/src/components/SiteFooter.module.css
@@ -1,3 +1,11 @@
+.academy {
+  color: #fff;
+  font-size: 1.08rem;
+  font-family: 'Lato', Arial, Helvetica, sans-serif;
+  font-weight: 400;
+  letter-spacing: 0.7px;
+  margin-top: 12px;
+}
 .bottomNavRow {
   width: 100%;
   display: flex;
