--- a/src/components/AboutUs.module.css
+++ b/src/components/AboutUs.module.css
@@ -86,14 +86,16 @@
   width: 100%;
   height: 100%;
   min-height: 220px;
-  min-width: 320px;
+  min-width: 0;
   border: 0;
   display: block;
 }
 
 .section {
-  width: 100vw;
+  width: 100%;
+  max-width: 100%;
   min-height: 100vh;
+  min-height: 100svh;
   background: #23242a;
   padding: 24px 0 24px 0;
   box-sizing: border-box;
