--- a/src/components/AboutUs.module.css
+++ b/src/components/AboutUs.module.css
@@ -1,10 +1,11 @@
 .videoColumn {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-end;
   justify-content: flex-start;
   flex: 1 1 0;
-  max-width: 520px;
+  max-width: 420px;
+  margin-left: 4vw;
 }
 .videoDescription {
   margin-top: 14px;
@@ -18,7 +19,7 @@
 .headingWrapper {
   width: 100%;
   text-align: center;
-  margin-bottom: 36px;
+  margin-bottom: 8px;
 }
 .heading {
   /* font-size: clamp(3.2rem, 7vw, 5rem); */
@@ -30,15 +31,16 @@
   letter-spacing: 1.5px;
 }
 .contentRow {
-  width: 100%;
-  max-width: 1200px;
+  width: 100vw;
+  max-width: 100vw;
   display: flex;
   flex-direction: row;
   align-items: flex-start;
-  justify-content: center;
+  justify-content: space-between;
   gap: 48px;
-  margin: 0 auto;
-  padding: 0 24px;
+  margin: 0;
+  padding: 0 10vw;
+  box-sizing: border-box;
 }
 
 @media (max-width: 900px) {
@@ -47,25 +49,33 @@
     gap: 32px;
     align-items: center;
     padding: 0 8vw;
+    width: 100%;
+    max-width: 100%;
   }
   .videoWrapper {
     max-width: 100%;
   }
   .descriptionWrapper {
     max-width: 100%;
+    align-items: center;
+  }
+  .videoColumn {
+    align-items: center;
   }
 }
+
 .descriptionWrapper {
   flex: 1 1 0;
-  max-width: 520px;
+  max-width: 950px;
   margin: 0;
   text-align: left;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: flex-start;
 }
 .description {
-  font-size: 1.7rem;
+  font-size: 1.2rem;
   color: #fff;
   margin-bottom: 32px;
   line-height: 1.8;
