--- a/src/components/Services.module.css
+++ b/src/components/Services.module.css
@@ -11,7 +11,8 @@
   margin-bottom: 48px;
 }
 .header h2 {
-  font-size: clamp(2.5rem, 5vw, 4rem);
+  /* font-size: clamp(2.5rem, 5vw, 4rem); */
+  font-size: clamp(2.0rem, 4vw, 3rem);
   color: #fff;
   font-family: 'Open Sans', Arial, Helvetica, sans-serif;
   font-weight: 700;
@@ -21,7 +22,7 @@
 }
 .header p {
   color: #fff;
-  font-size: 1.15rem;
+  font-size: clamp(1.0rem, 2vw, 1.15rem);
   font-family: 'Lato', Arial, Helvetica, sans-serif;
   margin-bottom: 0;
   text-align: center;
